# cps-future

./: CMakeLists.txt  Doxyfile.in  FindFuture.cmake  LICENSE  README.debian  README.md  set_cxx_norm.cmake
benchmarks/: CMakeLists.txt  benchmark.cpp
include/: Future.h
include/cps/: base_future.h  future.h  leaf_future.h  sequence_future.h
include/cps/future/: error_code.h  implementation.h  is_string.h  utils.h
src/: benchmark.cpp  future.cpp  future_tests.cpp  leaf_future_tests.cpp  neo.cpp  typed_future_tests.cpp
tests/: CMakeLists.txt  Log.h  chained.cpp  future.cpp  is_string.cpp  leaf_future.cpp  qc.cpp  standalone.cpp  utils.cpp
